# FlagEval

./: .gitignore  README.md  README_zh.md  evaluate.md
CLIPEval/: README.md  batch_eval.sh  (+3 more)
flageval-serving/: Dockerfile  README.md  pyproject.toml
flageval-serving/examples/cv/: Dockerfile
flageval-serving/examples/cv/resnet/: meta.json  model_adapter.py
flageval-serving/examples/cv/resnet/model/: README.md  user_model.py
flageval-serving/examples/cv/swin_large/: meta.json  model_adapter.py
flageval-serving/examples/cv/swin_large/model/: README.md  config.py  user_model.py
flageval-serving/examples/cv/swin_large/model/bricks/: __init__.py
flageval-serving/examples/mm/retrieval/: Dockerfile  meta.json  model_adapter.py
flageval-serving/examples/mm/retrieval/model/: inference.py
flageval-serving/examples/mm/t2i/: Dockerfile  model_adapter.py  run.sh
flageval-serving/examples/mm/t2i/model/: inference.py
flageval-serving/examples/mm/vqa/blip/: Dockerfile  model_adapter.py
flageval-serving/examples/mm/vqa/llava1.5/: Dockerfile  model_adapter.py
flageval-serving/examples/mm/vqa/llava1.6/: Dockerfile  meta.json  model_adapter.py  run.sh
flageval-serving/examples/verify/: meta.json  run.sh
flageval-serving/examples/verify/targets/: detection.json
flageval-serving/flageval/serving/: app.py  cli.py  extensions.py  finder.py  flagenv.py  flageval.py  guniconf.py  signals.py  util.py
flageval-serving/flageval/serving/service/: __init__.py  base.py  demo_service.py  guniconf.py  nlp.py  settings.py  views.py
flageval-serving/tests/: service.py
(+132 files in other folders)
